# agentcloudkelp

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: demo.cast  run_demo.sh
examples/crewai-flight-booking/: agent.py  kelp.yaml
examples/langgraph-customer-support/: agent.py  kelp.yaml
examples/openai-research-assistant/: agent.py  kelp.yaml
src/agentcloudkelp/: cli.py
src/agentcloudkelp/.github/agentcloudkelp-action/: action.yml
src/agentcloudkelp/.github/workflows/: ci.yml
src/agentcloudkelp/adapters/: __init__.py  base.py  crewai.py  function.py  http.py  langgraph.py  openai_sdk.py
src/agentcloudkelp/assertions/: __init__.py  deterministic.py  engine.py  results.py  semantic.py
src/agentcloudkelp/chaos/: __init__.py  injector.py  input_mutator.py  latency.py  tool_failure.py
src/agentcloudkelp/contract/: __init__.py  errors.py  parser.py  schema.py
src/agentcloudkelp/gates/: __init__.py  cost.py  engine.py  latency.py  results.py  safety.py
src/agentcloudkelp/reporters/: __init__.py  cli.py  github.py  json_report.py  junit.py
src/agentcloudkelp/runner/: scenario_runner.py
src/agentcloudkelp/snapshots/: __init__.py  differ.py  recorder.py  store.py
src/agentcloudkelp/tests/: __init__.py  test_assertions.py  test_chaos.py  test_contract_parser.py  test_gates.py  test_http_adapter.py  test_scenario_runner.py  test_snapshots.py
src/agentcloudkelp/tests/fixtures/: snapshot_baseline.json  valid_contract.yaml
tests/: test_assertions.py  test_chaos.py  test_contract_parser.py  test_gates.py  test_http_adapter.py  test_scenario_runner.py  test_snapshots.py
