[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project]
name = "agentcloudkelp"
version = "0.1.1"
description = "YAML-first stress testing for AI agents. Inject faults, catch behavioral drift, enforce cost budgets."
readme = "README.md"
authors = [
  { name = "Aquib Nawab", email = "aquib.nawab9006@gmail.com" },
]
license = { text = "Read License File" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "testing", "fault-injection", "chaos-testing", "llm", "yaml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "click",
  "pyyaml",
  "pydantic>=2.0",
  "rich",
  "litellm",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
]

[project.scripts]
kelp = "agentcloudkelp.cli:main"

[project.urls]
Homepage = "https://github.com/AquibNawab/agentcloudkelp"
Repository = "https://github.com/AquibNawab/agentcloudkelp"
Issues = "https://github.com/AquibNawab/agentcloudkelp/issues"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
